kubernetes/apps/xnails/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xnails
  labels:
    app.kubernetes.io/name: xnails
    app.kubernetes.io/part-of: xnails-site
